# crispy

./: .gitignore  README.md  agents.md  apimarttutorial.md.rtf  crispy.db-shm  crispy.db-wal  main.py  package-lock.json  pyproject.toml  tutorial.md  understand_pic.py
app/: __init__.py  main.py
app/agents/: persona_contracts.py  personas.py  registry.py  runtime.py
app/analytics/: __init__.py  ad_analytics.py  base.py  creative_decisions.py  cross_platform.py  order_analytics.py  product_analytics.py  schemas.py  sku_regression_scorecard.py  tools.py
app/api/: routes.py
app/core/: config.py
app/dashboard/: __init__.py  layout.py  (+3 more)
docs/: tutorial.md
personas/: compliance_agent.md  gm_orchestrator.md  scoring_agent.md
tests/: conftest.py  test_agent_api_configs.py  test_calendar_publishing.py  test_contracts.py  test_creative_attribution.py  test_creative_presets.py  test_dashboard_assets.py  test_data_sources.py  test_execution_memory.py  test_feedback_and_personas.py  test_gm_evolution.py  test_gm_review.py  test_llm_provider.py  test_marketplace_main_image.py  test_persona_contracts.py  test_persona_prompt_injection.py  test_pipeline_api.py  test_preflight_inline.py  test_reference_library.py  test_rich_run.py  test_run_templates.py  test_runtime_video_pipeline.py  test_scoring.py  test_shop_analysis.py  test_shop_workspace.py  test_sku_regression_scorecard.py  test_sku_regression_smoke.py  test_social_channel_contracts.py  test_stage_contracts.py  test_tiktok_integration.py  test_video_control_contracts.py  test_video_frame_qa.py  test_worker_full_auto.py
(+94 files in other folders)
